--- a/frontend/report.html
+++ b/frontend/report.html
@@ -21,6 +21,9 @@
             <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Transaction Reports</h1>
             <p class="mb-4">Generate detailed transaction reports filtered by your chosen criteria. Use the results to review spending habits or export data for further analysis.</p>
             <form id="report-form" class="bg-white p-4 rounded shadow grid grid-cols-1 md:grid-cols-3 gap-4">
+                <label class="block md:col-span-3">Ask in plain English:
+                    <input type="text" id="nl-query" class="border p-2 rounded w-full" placeholder="e.g., costs for cars in the last 12 months" data-help="Describe the report you want in plain English">
+                </label>
                 <label class="block">Category: <select id="category" multiple class="border p-2 rounded w-full" data-help="Filter by category"></select></label>
                 <label class="block">Tag: <select id="tag" multiple class="border p-2 rounded w-full" data-help="Filter by tag"></select></label>
                 <label class="block">Group: <select id="group" multiple class="border p-2 rounded w-full" data-help="Filter by group"></select></label>
@@ -184,7 +187,21 @@
     }
 
     // Execute the report query and render results and chart
-    function runReport() {
+    async function runReport() {
+        const nl = document.getElementById('nl-query').value.trim();
+        if (nl) {
+            const resp = await fetch('../php_backend/public/nl_report.php?' + new URLSearchParams({ q: nl }).toString());
+            const filters = await resp.json();
+            if (filters.category) window.catChoices.setChoiceByValue(String(filters.category));
+            if (filters.tag) window.tagChoices.setChoiceByValue(String(filters.tag));
+            if (filters.group) window.groupChoices.setChoiceByValue(String(filters.group));
+            if (filters.segment) window.segmentChoices.setChoiceByValue(String(filters.segment));
+            document.getElementById('text').value = filters.text || '';
+            document.getElementById('start').value = filters.start || '';
+            document.getElementById('end').value = filters.end || '';
+            document.getElementById('nl-query').value = '';
+        }
+
         const category = getSelectedValues(window.catChoices);
         const tag = getSelectedValues(window.tagChoices);
         const group = getSelectedValues(window.groupChoices);
@@ -200,45 +217,44 @@
         if (text) params.append('text', text);
         if (start) params.append('start', start);
         if (end) params.append('end', end);
-        return fetch('../php_backend/public/report.php?' + params.toString())
-            .then(resp => resp.json())
-            .then(data => {
-                const gridEl = document.getElementById('results-grid');
-                const chartContainer = document.getElementById('chart');
-                gridEl.innerHTML = '';
-                chartContainer.innerHTML = '';
-                window.reportTable = null;
-                if (Array.isArray(data) && data.length) {
-                    window.reportTable = tailwindTabulator(gridEl, {
-                        data: data,
-                        layout: 'fitDataStretch',
-                        columns: [
-                            { title: 'Date', field: 'date' },
-                            { title: 'Description', field: 'description', bottomCalc: function() { return 'Total'; } },
-                            { title: 'Category', field: 'category_name', formatter: badgeFormatter('bg-green-200 text-green-800') },
-                            { title: 'Tag', field: 'tag_name', formatter: badgeFormatter('bg-indigo-200 text-indigo-800') },
-                            { title: 'Group', field: 'group_name', formatter: badgeFormatter('bg-purple-200 text-purple-800') },
-                            { title: 'Segment', field: 'segment_name', formatter: badgeFormatter('bg-yellow-200 text-yellow-800') },
-                            { title: 'Amount', field: 'amount', formatter: 'money', formatterParams: { symbol: '£', precision: 2 }, hozAlign: 'right', bottomCalc: function(values) { var total = 0; values.forEach(function(value) { total += parseFloat(value) || 0; }); return total; }, bottomCalcFormatter: 'money', bottomCalcFormatterParams: { symbol: '£', precision: 2 } }
-                        ]
-                    });
-                    const grouped = groupTransactions(data);
-                    const cats = grouped.grouped.map(g => g.label);
-                    const amounts = grouped.grouped.map(g => parseFloat(g.total));
-                    const label = grouped.group.charAt(0).toUpperCase() + grouped.group.slice(1);
-                    Highcharts.chart('chart', {
-                        chart: { type: 'column', backgroundColor: 'transparent' },
-                        title: { text: 'Transaction Amounts by ' + label },
-                        xAxis: { categories: cats, title: { text: label } },
-                        yAxis: { title: { text: 'Amount' } },
-                        legend: { enabled: false },
-                        tooltip: { pointFormatter: columnTooltip },
-                        series: [{ name: 'Amount', data: amounts, color: chartColors[0] }]
-                    });
-                } else {
-                    gridEl.innerHTML = 'No transactions found.';
-                }
+
+        const fetchUrl = '../php_backend/public/report.php?' + params.toString();
+        const data = await fetch(fetchUrl).then(resp => resp.json());
+        const gridEl = document.getElementById('results-grid');
+        const chartContainer = document.getElementById('chart');
+        gridEl.innerHTML = '';
+        chartContainer.innerHTML = '';
+        window.reportTable = null;
+        if (Array.isArray(data) && data.length) {
+            window.reportTable = tailwindTabulator(gridEl, {
+                data: data,
+                layout: 'fitDataStretch',
+                columns: [
+                    { title: 'Date', field: 'date' },
+                    { title: 'Description', field: 'description', bottomCalc: function() { return 'Total'; } },
+                    { title: 'Category', field: 'category_name', formatter: badgeFormatter('bg-green-200 text-green-800') },
+                    { title: 'Tag', field: 'tag_name', formatter: badgeFormatter('bg-indigo-200 text-indigo-800') },
+                    { title: 'Group', field: 'group_name', formatter: badgeFormatter('bg-purple-200 text-purple-800') },
+                    { title: 'Segment', field: 'segment_name', formatter: badgeFormatter('bg-yellow-200 text-yellow-800') },
+                    { title: 'Amount', field: 'amount', formatter: 'money', formatterParams: { symbol: '£', precision: 2 }, hozAlign: 'right', bottomCalc: function(values) { var total = 0; values.forEach(function(value) { total += parseFloat(value) || 0; }); return total; }, bottomCalcFormatter: 'money', bottomCalcFormatterParams: { symbol: '£', precision: 2 } }
+                ]
             });
+            const grouped = groupTransactions(data);
+            const cats = grouped.grouped.map(g => g.label);
+            const amounts = grouped.grouped.map(g => parseFloat(g.total));
+            const label = grouped.group.charAt(0).toUpperCase() + grouped.group.slice(1);
+            Highcharts.chart('chart', {
+                chart: { type: 'column', backgroundColor: 'transparent' },
+                title: { text: 'Transaction Amounts by ' + label },
+                xAxis: { categories: cats, title: { text: label } },
+                yAxis: { title: { text: 'Amount' } },
+                legend: { enabled: false },
+                tooltip: { pointFormatter: columnTooltip },
+                series: [{ name: 'Amount', data: amounts, color: chartColors[0] }]
+            });
+        } else {
+            gridEl.innerHTML = 'No transactions found.';
+        }
     }
 
     document.getElementById('report-form').addEventListener('submit', function(e) {
