--- a/frontend/all_years_dashboard.html
+++ b/frontend/all_years_dashboard.html
@@ -111,32 +111,27 @@
     }
 
     // Draw a column chart summarising totals
-    function buildChart(id, title, data){
+    function buildChart(id, title, data, colorFn){
         Highcharts.chart(id, {
-            colors: chartColors,
             chart: { type: 'column' },
             title: { text: title },
             xAxis: { categories: data.map(d => d.name) },
             yAxis: { title: { text: 'Amount (£)' }, labels: { formatter: function(){ return '£' + Highcharts.numberFormat(this.value, 2); } } },
             tooltip: { pointFormatter: columnTooltip },
-            series: [{ name: 'Total', data: data.map(d => parseFloat(d.total)), colorByPoint: true }]
+            series: [{ name: 'Total', data: data.map(d => ({ y: parseFloat(d.total), color: colorFn ? colorFn(d) : chartColors[0] })) }]
         });
     }
 
     // Build sunburst charts for categories and tags across all years
     function buildSunburstCharts(incomeId, outgoingsId, categories, tags){
 
-        const colors = Highcharts.getOptions().colors;
-
         // Create hierarchical data for either income or outgoing values
         function createData(isIncome){
             const data = [{ id: 'root', parent: '', name: '' }];
-            let colorIndex = 0;
             categories.forEach(c => {
                 const total = parseFloat(c.total);
                 if ((isIncome && total > 0) || (!isIncome && total < 0)) {
-                    const color = colors[colorIndex % colors.length];
-                    colorIndex++;
+                    const color = getCategoryColor(c.name, c.segment_name);
                     const catId = c.name;
                     data.push({ id: catId, parent: 'root', name: c.name, value: Math.abs(total), color });
                     tags.filter(t => t.category === c.name && ((isIncome && parseFloat(t.total) > 0) || (!isIncome && parseFloat(t.total) < 0))).forEach(t => {
@@ -180,10 +175,10 @@
                 buildTable('tags-table', data.tags, data.years, 'bg-indigo-200 text-indigo-800');
                 buildChart('tags-chart', 'Tag Totals', data.tags);
                 buildTable('categories-table', data.categories, data.years, 'bg-green-200 text-green-800');
-                buildChart('categories-chart', 'Category Totals', data.categories);
+                buildChart('categories-chart', 'Category Totals', data.categories, d => getCategoryColor(d.name, d.segment_name));
                 buildSunburstCharts('category-tag-income', 'category-tag-outgoings', data.categories, data.tags);
                 buildTable('segments-table', data.segments, data.years, 'bg-yellow-200 text-yellow-800');
-                buildChart('segments-chart', 'Segment Totals', data.segments);
+                buildChart('segments-chart', 'Segment Totals', data.segments, d => getSegmentColor(d.name));
                 buildTable('groups-table', data.groups, data.years, 'bg-purple-200 text-purple-800');
                 buildChart('groups-chart', 'Group Totals', data.groups);
             });
