Add palette refresh and unique segment colors

--- a/frontend/palette.html
+++ b/frontend/palette.html
@@ -17,7 +17,10 @@
         </label>
         <p>Segments: <span id="segment-count"></span></p>
         <div id="segments"></div>
-        <button id="apply" class="bg-indigo-600 text-white px-4 py-2 rounded">Apply</button>
+        <div class="flex gap-2">
+          <button id="refresh" class="bg-indigo-500 text-white px-4 py-2 rounded" aria-label="Refresh palette">Refresh</button>
+          <button id="apply" class="bg-indigo-600 text-white px-4 py-2 rounded" aria-label="Apply palette">Apply</button>
+        </div>
       </div>
     </main>
   </div>
