--- a/frontend/palette.html
+++ b/frontend/palette.html
@@ -13,14 +13,10 @@
       <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Palette Settings</h1>
 
       <div class="bg-white p-6 rounded shadow border border-gray-400 space-y-4">
-
-        <label class="block">Seed Colour
-          <input type="color" id="seed" class="ml-2" aria-label="Seed colour picker" data-help="Base colour for generating the palette">
-        </label>
         <ul class="list-disc pl-5 text-gray-700">
           <li>Set segment colours using the picker beside each name. Ticking <em>Lock</em> keeps your choice.</li>
           <li>To reset a segment, untick its <em>Lock</em> box and press <strong>Refresh</strong>.</li>
-          <li>Press <strong>Apply</strong> to save the seed and any locked colours.</li>
+          <li>Press <strong>Apply</strong> to save any locked colours.</li>
         </ul>
         <p>Segments: <span id="segment-count"></span></p>
         <div id="segments"></div>
